# pita

./: .gitignore  404.html  CONTRIBUTING.md  GEMINI.md  HIERARCHY.md  LICENSE  NOTICE  README.md  README_TensorRT.md  engine_check.py  environment.yml  index.html  logits_test.py  mkdocs.yml  objects.inv  power_sampling.yml  pyproject.toml  requirements.txt
.github/: deploy.yml
.github/workflows/: deploy.yml
LICENSE/: index.html
LICENSING-GUIDE/: index.html
NOTICE/: index.html
TENSORRT-LICENSE-NOTICE/: index.html
api/api_template/: index.html
api/serve/: index.html
api/test_time_coding/: index.html
automated_installation/: index.html
docs/: LICENSING-GUIDE.md  TENSORRT-LICENSE-NOTICE.md  automated_installation.md  index.md  installation.md  usage.md
docs/api/: api_template.md  serve.md  test_time_coding.md
docs/examples/: inference_backends.md  sampling_strategies.md  serving_modes.md  token_metrics.md
docs/inference/: LLM_backend.md  autoregressive_sampler_backend.md  deepspeed_backend.md  llama_cpp_backend.md  tensorRT_backend.md  transformers_backend.md  vllm_backend.md  vllm_logits_processor.md
docs/sampling/: best_of.md  power_sample.md  smc.md
docs/stylesheets/: extra.css
docs/utils/: benchmarking_utils.md  constants.md  parse_utils.md  redis_manager.md  system_utils.md  valkey_manager.md
enviorment_files/: llamacpp_cuda_README.md  power_sampling_llamacpp_cuda.yml  power_sampling_vllm_cuda.yml  requirements_vllm_cuda.txt.txt
environment_files/: README_TensorRT.md  README_llamacpp_windows_cpu.md  llamacpp_cuda.yml  llamacpp_cuda_README.md  llamacpp_windows_cpu.yml  pita_llama_cpp.yml  power_sampling_tensorrt_cuda.yml  setup_llamacpp_cuda.sh  tensorrt_cuda.yml  vllm_cuda.yml
examples/: api_usage.py  programmatic_usage.py
examples/inference_backends/: index.html
examples/sampling_strategies/: index.html
examples/serving_modes/: index.html
examples/token_metrics/: index.html
grading_utils/math/: eval_math.py  math_grader.py
inference/LLM_backend/: index.html
inference/llama_cpp_backend/: index.html
inference/tensorRT_backend/: index.html
inference/vllm_backend/: index.html
inference/vllm_logits_processor/: index.html
installation/: index.html
llm_experiments/: power_samp.py
pita/: cli.py
pita/api/: __init__.py  api_template.py  serve.py  serve_power_sampling.py  test_time_coding.py
pita/inference/: LLM_backend.py  __init__.py  autoregressive_sampler_backend.py  deepspeed_backend.py  llama_cpp_backend.py  llama_cpp_logits_processor.py  tensorRT_backend.py  tensorRT_logits_processor.py  vllm_backend.py  vllm_logits_processor.py
pita/old_tests/: api_test.py  benchmarking_test.py  logits_processor.py  test.sh
pita/sampling/: __init__.py  best_of.py  entropy_minimization.py  power_sample.py  smc.py  token_metrics.py
pita/tests/: api_test.py  benchmarking_test.py  programatical_tests.py  programmatical_tests.py  test_coding.py
pita/utils/: benchmarking_utils.py  constants.py  parse_utils.py  redis_manager.py  system_utils.py  valkey_manager.py
pits/api/: serve_power_sampling.py  test_time_coding.py
pits/inference/: autoregressive_sampler_backend.py  llama_cpp_backend.py  vllm_backend.py
pits/sampling/: best_of.py  power_sample.py
pits/tests/: api_test.py  benchmarking_test.py  programatical_tests.py  test.sh  test_coding.py
pits/utils/: benchmarking_utils.py  system_utils.py
results/: math500_power_sampling_results.csv
results/qwen/: qwen_base_power_samp_results_10_0.5_0_0.csv  qwen_base_power_samp_results_20_0.25_0_0 2025-10-15_11-08-43.csv  qwen_base_power_samp_results_20_0.25_0_0 2025-10-15_13-08-54.csv  qwen_base_power_samp_results_20_0.25_0_0 2025-10-15_13-29-51.csv  qwen_base_power_samp_results_20_0.25_0_0 2025-10-15_16-54-53.csv  qwen_base_power_samp_results_20_0.25_0_0 2025-10-15_17-07-34.csv  qwen_base_power_samp_results_20_0.5_0_0 2025-10-15_10-46-59.csv
sampling/power_sample/: index.html
sampling/smc/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/api_template/: index.html
site/api/serve/: index.html
site/api/test_time_coding/: index.html
site/examples/inference_backends/: index.html
site/examples/sampling_strategies/: index.html
site/examples/serving_modes/: index.html
site/examples/token_metrics/: index.html
site/inference/LLM_backend/: index.html
site/inference/autoregressive_sampler_backend/: index.html
site/inference/deepspeed_backend/: index.html
site/inference/llama_cpp_backend/: index.html
site/inference/tensorRT_backend/: index.html
site/installation/: index.html
site/sampling/best_of/: index.html
site/usage/: index.html
src/: api_test.py  benchmarking_test.py  benchmarking_utils.py  models.txt  parse_utils.py  power_sample.py  power_sample_server.py  serve_power_sampling.py
src/api/: api_template.py  serve_power_sampling.py  test_time_coding.py
src/inference/: autoregressive_sampler_backend.py  vllm_backend.py
src/power_sampling/: power_sample.py  smc.py  smc_w_sc.py
src/sampling/: power_sample.py
src/tests/: api_test.py  benchmarking_test.py  test.sh  test_coding.py  test_power_sampling_temperature.py
src/utils/: benchmarking_utils.py
tests/: README.md  test_library_check.py
tests/api/: __init__.py  test_api_integration_llama_cpp.py  test_cli.py  test_its_prompt.py  test_serve.py  test_serve_validation.py  test_test_time_coding.py
tests/boilerplate/: test_library_check.py
tests/inference/: conftest.py  test_AutoregressiveSampler_class.py
tests/utils/: __init__.py  test_valkey_manager.py
usage/: index.html
utils/benchmarking_utils/: index.html
utils/constants/: index.html
utils/parse_utils/: index.html
utils/system_utils/: index.html
utils/valkey_manager/: index.html
(+47 files in other folders)
