[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pita"
version = "0.0.1"
description = "A library to allow probabilistic inference time algorithms from any model"

# Core dependencies - minimal set needed for the library to work
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.10.0",
    "transformers>=4.30.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "datasets",
    "pandas>=2.0.0",
    "psutil",
    "pylatexenc",
    "sympy",
    "huggingface-hub>=0.16.0",
]

[project.optional-dependencies]
# vLLM backend dependencies
vllm = [
    "vllm>=0.10.0",
    "valkey>=6.0.0",
]

# llama.cpp backend dependencies
llama_cpp = [
    "llama-cpp-python",
]

# TensorRT backend dependencies
tensorrt = [
    "tensorrt_llm",
    "valkey>=6.0.0",
]

# Development/testing dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# Install all backends
all = [
    "pita[vllm]",
    "pita[llama_cpp]",
    "pita[tensorrt]",
    "pita[dev]",
]

[tool.setuptools]
packages = ["pita"]

[tool.pytest.ini_options]
norecursedirs = ["pita/old_tests"]